<resources>
    <string name="app_name">回眸客</string>
    <string name="app_button_back">返回</string>
    <string name="app_button_submit">提交</string>
    <string name="app_button_sure">确定</string>
    <string name="app_button_cancel">取消</string>
    <string name="app_button_save">保存</string>
    <string name="app_button_new">新建</string>
    <string name="app_button_delete">删除</string>
    <string name="app_button_edit">编辑</string>
    <string name="app_button_modify">修改</string>
    <string name="app_button_camera">拍照</string>
    <string name="app_button_photo">从相册选择</string>
    <string name="app_button_pay">支付</string>
    <string name="app_button_print">打印</string>
    <string name="app_button_print_pos">打印小票</string>
    <string name="app_data_empty">数据为空</string>
    <string name="log_demo">体验账号</string>
    <string name="log_username">账号:</string>
    <string name="log_username_hint">账号</string>
    <string name="log_password">密码:</string>
    <string name="log_password_hint">密码</string>
    <string name="log_button">&#160;登录&#160;</string>
    <string name="log_reg_button">注册</string>
    <string name="log_forget">忘记密码?</string>
    <string name="toast_log_phone_error">用户名不能为空</string>
    <string name="code_send_success">验证码发送成功</string>
    <string name="code_error">验证码错误</string>
    <string name="reg_next_step">下一步</string>
    <string name="reg_one_input_hint">手机号</string>
    <string name="reg_two_input_hint">验证码</string>
    <string name="reg_two_time">%s秒后重新发送</string>
    <string name="reg_two_resend">重新发送</string>
    <string name="reg_two_one">长时间收不到验证码？请使用手机号码</string>
    <string name="reg_two_two">发送"#1"到13482429933</string>
    <string name="reg_two_three">去发送"#1"</string>
    <string name="reg_three_password_hint">请输入不少于6位字符的密码</string>
    <string name="reg_three_re_password_hint">请再次输入密码</string>
    <string name="reg_three_shop_hint">店铺名称</string>
    <string name="reg_three_name_hint">真实姓名</string>
    <string name="reg_three_reg_button">同意《用户协议》并注册</string>
    <string name="reg_four_success_msg">注册成功\n\n%s</string>
    <string name="reg_four_success_log">登录</string>
    <string name="toast_reg_psw_less">密码不能少于6位字符</string>
    <string name="toast_reg_psw_same">两次密码不一样</string>
    <string name="toast_reg_loading_text">正在提交注册信息...</string>
    <string name="toast_reg_phone_error">手机号码格式不正确</string>
    <string name="toast_reg_code_error">请输入四位验证码</string>
    <string name="account_manage_user_old_psw">旧密码</string>
    <string name="account_manage_user_new_psw">新密码</string>
    <string name="account_manage_user_psw_sure">确定密码</string>
    <string name="account_manage_user_name">账号</string>
    <string name="account_manage_user_number">手机号码</string>
    <string name="account_manage_user_password">新密码</string>
    <string name="account_manage_user_password_comfit">确认密码</string>
    <string name="account_manage_user_permission">用户权限</string>
    <string name="forget_psw_title">找回密码</string>
    <string name="forget_psw_one_info">1.输入邮箱或手机号 > 2.输入验证码 > 3.重置密码</string>
    <string name="forget_psw_one_input_hint">邮箱/手机号</string>
    <string name="forget_psw_two_input_hint">请输入收到的6位验证码</string>
    <string name="forget_psw_two_info">等了好久，没有收到验证码？\n请使用"手机号码"发送数字"#1"\n至18551258467</string>
    <string name="forget_psw_three_input_new">请输入新密码</string>
    <string name="forget_psw_three_re_input_new">再次输入密码</string>
    <string name="forget_psw_reset_success">恭喜您!\n重置密码成功，请重新登录</string>
    <string name="forget_psw_re_login">重新登录</string>
    <string name="menu_account_text">账户管理</string>
    <string name="menu_store_manage">门店管理</string>
    <string name="menu_insert_data">反馈咨询</string>
    <string name="menu_printer_setting">打印设置</string>
    <string name="menu_apk_update">版本更新</string>
    <string name="menu_apk_exit">退出登录</string>
    <string name="main_qiandao_text">考勤</string>
    <string name="main_send_card">卡券派发</string>
    <string name="main_add_money">接车开单</string>
    <string name="main_small_order">预约订单</string>
    <string name="main_add_goods">新增商品</string>
    <string name="main_manage_goods">商品库存</string>
    <string name="main_manage_goods_message">商品售价、剩余库存查询</string>
    <string name="main_add_menber">办理会员</string>
    <string name="main_manage_menber">会员管理</string>
    <string name="main_manage_member_message">会员资料、可为会员进行充值</string>
    <string name="main_add_revenue">资金流水</string>
    <string name="main_add_revenue_message">刷卡、支付宝、微信、现金收款情况</string>
    <string name="main_check_sell">单据列表</string>
    <string name="main_check_sell_message">商品、项目收银单据</string>
    <string name="main_manage_pay">一键回眸</string>
    <string name="main_analysis">报表分析</string>
    <string name="main_analysis_message">储值、计次、商品、项目的销售概况</string>
    <string name="main_small_store">我的微店</string>
    <string name="main_manage_sell">会员体系</string>
    <string name="main_manage_attendance">考勤管理</string>
    <string name="main_qiandao_title">已签到!</string>
    <string name="main_qiandao_message">积分可在电脑端兑换回眸客付费功能</string>
    <string name="shop_info_title">店铺基本信息</string>
    <string name="shop_info_name">门店名称</string>
    <string name="shop_info_address">门店位置</string>
    <string name="shop_info_phone">店长电话</string>
    <string name="shop_info_dianzhang">店长</string>
    <string name="shop_info_user">查看店员</string>
    <string name="shop_info_cellphone">店铺电话</string>
    <string name="shop_info_type">行业类型</string>
    <string name="shop_info_modify">修改%s</string>
    <string name="message_center_title">消息中心</string>
    <string name="help_center_title">一分钟变身"回眸客"</string>
    <string name="help_center_submit">提建议</string>
    <string name="shop_web_share">店铺分享</string>
    <string name="blog_center_title">论坛</string>
    <string name="feedback_title">意见反馈</string>
    <string name="feedback_checkbox_title">发送手机号，我们将主动联系你</string>
    <string name="feedback_input_hint">手机号码/邮箱</string>
    <string name="feedback_sub_title1">您也可以通过以下联系方式联系我们</string>
    <string name="feedback_sub_title2">所有意见我们都会妥善处理后进行人工回复</string>
    <string name="feedback_qq_contact">QQ客服：2181856577</string>
    <string name="feedback_phone_contact">或者拨打人工客服：4008-328-728</string>
    <string name="feedback_phone_text">4008-328-728</string>
    <string name="setting_title">设置</string>
    <string name="setting_print_text">打印设置</string>
    <string name="setting_wifi_text">仅在wifi下加载商品图片</string>
    <string name="setting_version_text"> 版本更新</string>
    <string name="shortcut_menu_setting_title">快捷菜单设置</string>
    <string name="shortcut_menu_error_toast_text">只能选择两个菜单</string>
    <string name="goods_add_title">添加商品</string>
    <string name="goods_add_info_title">商品信息</string>
    <string name="goods_add_info_code">货号</string>
    <string name="goods_add_info_name">名称</string>
    <string name="goods_add_info_type">适用车型</string>
    <string name="goods_add_info_brand">品牌</string>
    <string name="goods_add_info_default_type">默认分类</string>
    <string name="goods_add_info_input_money">进价</string>
    <string name="goods_add_info_sell_money">售价</string>
    <string name="goods_add_info_input_count">数量</string>
    <string name="goods_add_info_kucun_count">单位</string>
    <string name="goods_add_info_format">规格</string>
    <string name="goods_add_info_unit">VIP价</string>
    <string name="goods_add_pic_title">上传图片</string>
    <string name="goods_list_title">商品列表</string>
    <string name="goods_list_search_hint">请输入商品名称、拼音、数字...</string>
    <string name="goods_list_search_hint2">请输入车牌号码、项目名、商品名...</string>
    <string name="goods_list_pan">商品盘点</string>
    <string name="goods_list_count">总正库存 %s 件，</string>
    <string name="goods_list_cost">总成本 %s 元</string>
    <string name="goods_list_add">添加商品</string>
    <string name="goods_list_type">分类</string>
    <string name="goods_list_item_count" formatted="false">$%s | %s</string>
    <string name="goods_list_item_info" formatted="false">条码：%s 库存：%s</string>
    <string name="goods_type_title">商品分类</string>
    <string name="goods_type_add_big">新增大分类</string>
    <string name="goods_type_add_small">新增小分类</string>
    <string name="goods_type_edite">编辑分类</string>
    <string name="goods_type_add_big_et_hint">请输入商品大分类</string>
    <string name="goods_type_add_small_et_hint">请输入商品小分类</string>
    <string name="goods_type_add_big_empty">商品大分类不能为空</string>
    <string name="goods_type_add_small_empty">商品小分类不能为空</string>
    <string name="goods_type_big_count">商品大分类%s件</string>
    <string name="goods_type_small_count">商品小分类%s件</string>
    <string name="goods_type_edit_small_count">共%s个小分类</string>
    <string name="goods_detail_title">编辑详情</string>
    <string name="goods_detail_delete">删除</string>
    <string name="goods_detail_add_sell">出/入库</string>
    <string name="goods_detail_share">分享</string>
    <string name="goods_detail_edit">编辑</string>
    <string name="goods_kucun_title">出入库操作</string>
    <string name="goods_kucun_in">入库</string>
    <string name="goods_kucun_in_hint">请输入入库数量</string>
    <string name="goods_kucun_out">出库</string>
    <string name="goods_kucun_out_hint">请输入出库数量</string>
    <string name="goods_kucun_count">当前库存：%s件</string>
    <string name="account_manage_title">账户管理</string>
    <string name="account_manage_shop_info">店铺信息</string>
    <string name="account_manage_shop_info_name">店铺名称</string>
    <string name="account_manage_shop_info_phone">店面电话</string>
    <string name="account_manage_shop_info_address">店铺地址</string>
    <string name="account_manage_user_info">当前用户</string>
    <string name="account_manage_user_info_title">账户信息</string>
    <string name="account_manage_user_info_phone">手机号</string>
    <string name="account_manage_user_info_name">用户名</string>
    <string name="account_manage_user_info_auth">账户权限</string>
    <string name="account_manage_user_info_psw">修改密码</string>
    <string name="account_manage_staff">员工管理</string>
    <string name="account_manage_add_staff">添加员工</string>
    <string name="account_manage_trade_type">行业类型</string>
    <string name="account_manage_employee_info_title">员工信息详情</string>
    <string name="account_manage_employee">员工</string>
    <string name="account_manage_add_staff_phone_hint">手机号码</string>
    <string name="account_manage_add_staff_name_hint">用户名</string>
    <string name="account_manage_add_staff_psw_hint">不少于6位字符的密码</string>
    <string name="account_manage_add_staff_re_psw_hint">再次输入密码</string>
    <string name="account_manage_add_staff_success">添加员工成功</string>
    <string name="account_manage_shop_name_empty">店铺名称不能为空</string>
    <string name="account_manage_shop_phone_error">铺面电话格式错误</string>
    <string name="project_list_search_hint">请输入项目名…</string>
    <string name="good_list_search_hint">请输入商品名称…</string>
    <string name="project_list">项目列表</string>
    <string name="goods_list">商品列表</string>
    <string name="add_count_recodes">冲次记录</string>
    <string name="member_add_title">新会员办理</string>
    <string name="member_add_card_type">会员卡类型</string>
    <string name="member_add_card_hint">微信扫描二维码获取卡号</string>
    <string name="member_add_card_no">卡号</string>
    <string name="member_add_card_name">姓名</string>
    <string name="member_add_card_phone">电话</string>
    <string name="member_add_car_number">车牌号</string>
    <string name="member_add_card_sex">性别</string>
    <string name="member_add_card_birthday">生日</string>
    <string name="member_add_car_type">车型</string>
    <string name="member_manage_title">会员列表</string>
    <string name="member_manage_filter">筛选</string>
    <string name="member_manage_hint">请输入手机号码，车牌号，名字</string>
    <string name="member_manage_box_title">全选</string>
    <string name="member_manage_count">共%s位会员</string>
    <string name="member_money_count">可用金额(元)</string>
    <string name="member_money_used">储值卡累计消费</string>
    <string name="member_money_add">累计充值</string>
    <string name="revenue_history_list">开单历史</string>
    <string name="revenue_result_text">恭喜您又成功销售一笔，本单实收</string>
</resources>