<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fb_et_height"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:gravity="top"
        android:textColor="@color/edite_color"
        android:textColorHint="@color/edite_color"
        android:textCursorDrawable="@null"
        android:textSize="14sp" />

    <CheckBox
        android:id="@+id/cb"
        style="@style/fb_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:checked="false"
        android:paddingLeft="6dp"
        android:text="@string/feedback_checkbox_title"
        android:textColor="@color/gray"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/feedback_input_hint"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textCursorDrawable="@null"
        android:visibility="gone"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@mipmap/button_blue_bg"
        android:text="@string/app_button_submit"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback_sub_title1"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/feedback_sub_title2"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <include layout="@layout/layout_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/feedback_qq_contact"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <include layout="@layout/layout_line" />

        <TextView
            android:id="@+id/tv_feedback_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/feedback_phone_contact"
            android:textColor="@color/gray"

            android:textSize="14sp" />

        <include layout="@layout/layout_line" />
    </LinearLayout>


</LinearLayout>