<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/un_enable_color"
    android:padding="10dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_button_camera"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:background="@drawable/button_pic_bg"/>

    <Button
        android:id="@+id/btn_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_button_photo"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:background="@drawable/button_pic_bg"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/app_button_cancel"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:background="@drawable/button_pic_cancel_bg"/>
</LinearLayout>