<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/top_bar_height"
    android:background="@color/top_bar_color">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/button_selector_bg"
        android:layout_centerVertical="true"
        android:drawableLeft="@mipmap/left_one"
        android:textColor="@color/white"
        android:text="@string/app_button_back"
        android:padding="10dp"
        android:drawablePadding="10dp"
        android:textSize="14sp"
        android:onClick="goBack"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/app_name"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/button_selector_bg"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:textColor="@color/white"
        android:text="@string/app_button_save"
        android:textSize="14sp"
        android:visibility="gone"
        android:onClick="onSubmit"
        android:padding="10dp"/>

</RelativeLayout>