<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/appBG">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:src="@mipmap/pay_finish"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginTop="20dp"
        android:text="@string/revenue_result_text"
        android:textColor="@color/top_bar_color"/>

    <TextView
        android:id="@+id/tv_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/top_bar_color"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:background="@drawable/button_revenue_result_continue"
        android:text="@string/app_button_print_pos"/>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="13sp"
        android:background="@drawable/button_revenue_result_send"
        android:text="@string/revenue_history_list"/>
</LinearLayout>