<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/forget_psw_two_input_hint"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/et_num"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:textColor="@color/edite_color"
        android:textColorHint="@color/edite_color"
        android:textCursorDrawable="@null"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button_login_bg"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/app_button_submit"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/gray"
        android:lineSpacingMultiplier="2"
        android:textSize="15sp"
        android:text="@string/forget_psw_two_info"/>
</LinearLayout>