<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/forget_psw_one_info"
        android:background="@color/white"
        android:textColor="@color/black"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_psw_one_input_hint"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:textColor="@color/edite_color"
        android:textColorHint="@color/edite_color"
        android:textCursorDrawable="@null"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button_login_bg"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/app_button_submit"
        android:textColor="@color/white" />
</LinearLayout>