<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBG"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#51B1F2"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lineSpacingExtra="5dp"
            android:text="@string/member_money_count"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_used"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lineSpacingExtra="5dp"
            android:text="@string/member_money_used"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lineSpacingExtra="5dp"
            android:text="@string/member_money_add"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <in.srain.cube.views.loadmore.LoadMoreListViewContainer
        android:id="@+id/load_more_list_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ListView
            android:id="@+id/lv_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:dividerHeight="1dp"
            android:headerDividersEnabled="true"
            tools:listitem="@layout/item_member_money_record"/>
    </in.srain.cube.views.loadmore.LoadMoreListViewContainer>
</LinearLayout>